--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* Image at top of marketing meeting*/
 .hero {
     height: 800px;
     width: 100%;
@@ -57,6 +57,31 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/*Main body of website*/
+.main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.main-body {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.main-body h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.main-body img {
+    max-height: 200px;
 }
 
 .float-left {
@@ -68,13 +93,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -100,24 +119,6 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-.main-body {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.main-body h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.main-body img {
-    max-height: 200px;
 }
 
 .footer {
